# MicroKanren

./: LICENSE  MicroKanren.cabal  MicroKanren.hs
examples/Examples/Language/: MicroKanren.hs
src/Language/: MicroKanren.hs
src/Language/MicroKanren/: Core.hs  Extended.hs  Reify.hs
