name:                   MicroKanren
version:                1.0.0
synopsis:               Implementation of MicroKanren
license:                BSD3
license-file:           LICENSE
author:                 joneshf
maintainer:             jones3.hardy@gmail.com
copyright:              (c) 2015 Hardy Jones
category:               Language
build-type:             Simple
cabal-version:          >=1.10

library
    build-depends:      base >=4.8 && <4.9
    default-language:   Haskell2010
    exposed-modules:      Language.MicroKanren
                        , Language.MicroKanren.Core
    ghc-options:        -Wall -Werror -XGeneralizedNewtypeDeriving
    hs-source-dirs:     src

executable examples
    build-depends:      base, MicroKanren
    default-language:   Haskell2010
    hs-source-dirs:     examples
    ghc-options:        -main-is Examples.Language.MicroKanren
    main-is:            Examples/Language/MicroKanren.hs
